# pi05_custom

./: .gitignore  Makefile  README.md  pyproject.toml  train.sh
src/lerobot_policy_pi05_custom/: __init__.py  configuration_pi05_custom.py  processor_pi05_custom.py
src/pi05_custom/: __init__.py  configuration_pi05.py  modeling_pi05.py  processor_pi05.py
src/starter/: __init__.py
